# docktop

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml  install.sh
.github/workflows/: release.yml
docker/: docker-compose.yml
legacy_go/: go.mod  go.sum  main.go
legacy_go/docker/: client.go
legacy_go/ui/: model.go  styles.go
src/: action.rs  app.rs  config.rs  docker.rs  keys.rs  main.rs  ui.rs
src/theme/: icons.rs
src/ui/: charts.rs  containers.rs  footer.rs  logs.rs  mod.rs  monitor.rs  tools.rs  util.rs
src/wizard/: logic.rs  models.rs
themes/: cyberpunk.toml  dracula.toml  gruvbox.toml  monochrome.theme  monochrome.toml
