[package]
name = "docktop"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
hex = "0.4" # Useful for container IDs if needed
chrono = "0.4" # For timestamps
