[package]
name = "docktop"
version = "0.1.0"
edition = "2021"
default-run = "docktop"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.26"
crossterm = "0.27"
anyhow = "1.0"
hex = "0.4" # Useful for container IDs if needed
chrono = "0.4" # For timestamps
toml = "0.9.8"
bollard = "0.19.4"
tar = "0.4.44"
futures-util = "0.3.31"
bytes = "1.11.0"
http-body-util = "0.1.3"
sysinfo = "0.37.2"
serde_yaml = "0.9.34"
self_update = "0.42.0"

